# networkrail-realtime-analytics

./: .gitignore  Makefile  README.md  docker-compose.kafka.yml  docker-compose.yml  pyproject.toml
dags/: networkrail_dbt_dag.py  networkrail_movements.py
dbt/networkrail/: dbt_project.yml  packages.yml  profiles.yml
dbt/networkrail/models/marts/: _exposures.yml  operating_company_that_has_highest_number_of_late_trains.sql
dbt/networkrail/models/staging/: _models.yml  _src.yml  stg_networkrail__movements.sql
docker/: Dockerfile-airflow  Dockerfile-spark
networkrail_consumer/: consumer.py  pyproject.toml
networkrail_producer/: get_networkrail_movements.py  pyproject.toml
pyspark/: transform.py
