[tool.poetry]
name = "07-end-to-end-project"
version = "0.1.0"
description = ""
authors = ["phukijnat <phukijnat.mek@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "1.11.7"
dbt-bigquery = "1.11.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
